[tool.poetry]
name = "portfoliomanager"
version = "0.1.0"
description = ""
authors = ["steven.maharaj <steven.maharaj@zerocap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
